[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amrrulevalidator"
version = "1.0.1"
description = "Validator for draft AMRrules files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Jane Hawkey", email = "jane.hawkey@monash.edu"}
]
dependencies = [
    "obonet>=1.1.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build",
]

[project.scripts]
amrrule = "amrrulevalidator.cli:main"

[project.urls]
"Homepage" = "https://github.com/AMRverse/AMRrulevalidator"
"Bug Tracker" = "https://github.com/AMRverse/AMRrulevalidator/issues"

[tool.setuptools]
packages = ["amrrulevalidator", "amrrulevalidator.utils"]
include-package-data = true

[tool.setuptools.package-data]
amrrulevalidator = ["resources/*"]